feat: audit logging feature added all the api's developed
